--- a/about.html
+++ b/about.html
@@ -148,16 +148,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3 class="title_section text-center">About us</h3><br>
-                    <div class="vision">
-                        <div class="row">
-                            <div class="container">
-                                <div class="col-md-12">
-                                  <h5><span class="vision_color">Vision:</span> Our vision is to be known for our brand products and to be the leading and preferred cell phone distribution store
-                                nationwide, that provides easy access to quality products.</h5>  
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="about_content_p">
                         <p>Morep Lda. Is active in the market since 2003. During the16-year activity we developed from a small, unknown firm
                             into a
@@ -188,12 +179,24 @@
                     <div class="vision">
                         <div class="row">
                             <div class="container">
-                                <div class="col-md-12">
+                                <div class="col-md-12 p-0">
+                                    <h5><span class="vision_color">Vision:</span> Our vision is to be known for our brand products and to be
+                                        the leading and preferred cell phone distribution store
+                                        nationwide, that provides easy access to quality products.</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vision">
+                        <div class="row">
+                            <div class="container">
+                                <div class="col-md-12 p-0">
                                     <h5><span class="vision_color">Mission:</span> In order to achieve our vision, we intend to remain proactive in the business by:</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="mission">
                         <p><i class="fas fa-asterisk"></i> Coming up with innovative plans for our valued customers,</p>
                         <p><i class="fas fa-asterisk"></i> Improve our services and ensure they are competitive in terms of prices and quality,</p>
